# llm-hack

./: README.md  pyproject.toml
.github/: test.yaml
.github/workflows/: test.yml
src/llm_hack/: tokenizer.py
src/llm_hack/data/: dataembedder.py  dataloader.py  dataset.py
src/llm_hack/tokenizer/: tokenizer.py  tokenizerGPT2.py  tokenizer_interface.py
tests/: test_dataembedder.py  test_dataset.py  test_tokenizer.py
