[project]
name = "llm-hack"
version = "0.1.0"
description = "LLM Hack Project"
readme = "README.md"
authors = [
    { name = "LaraRos", email = "rostami.lara@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "tiktoken",
    "torch>=2.7.0",
]

[project.scripts]
llm-hack = "llm_hack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.1.1",
    "flake8>=7.0.0"
]
